--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,7 @@ pipeline{
         
         environment { 
           CC = 'clang'
+          BITBUCKET_COMMON_CREDS = credentials('GitHub')
         }
         stages{
             stage("Example_1"){
