--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,8 +22,7 @@ pipeline{
             }
             stage("Example_2"){
                 steps{
-                echo "Running ${env.BUILD_ID} on ${env.JENKINS_URL}"
-      //              createFolders()    
+                    createFolders()    
                 }
              }
             
