--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,8 @@
-library identifier: 'custom-lib@master', retriever: modernSCM(
+library identifier: 'custom-lib@main', retriever: modernSCM(
   [$class: 'GitSCMSource',
-   remote: 'git@git.mycorp.com:my-jenkins-utils.git',
-   credentialsId: 'my-private-key'])
+   remote: 'https://github.com/pojjala/aci.git'])
    
-monoreposeed{
+createFolders{
 SERVICE_BUILD_PATH = ""
 SERVICE_HELP_CHART_PATH = ""
 BITBUCKET_PROJECT_URL =  ""
